fix grid-gap

--- a/src/components/contact/index.scss
+++ b/src/components/contact/index.scss
@@ -22,7 +22,11 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    grid-gap: 20px;
+
+    & > * + * {
+      margin-top: 20px;
+    }
+
     align-items: flex-end;
 
     @include desktop {
