--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -48,8 +48,11 @@
 
   &__links {
     display: flex;
-    grid-gap: 100px;
     font-size: 16px;
+
+    & > * + * {
+      margin-left: 100px;
+    }
 
     @include tablet {
       justify-content: space-evenly;
@@ -83,7 +86,10 @@
 
   &__social-links {
     display: flex;
-    grid-gap: 10px;
+
+    & > * + * {
+      margin-left: 10px;
+    }
 
     header {
       font-size: 16px;
